--- a/src/styles/components/modal.scss
+++ b/src/styles/components/modal.scss
@@ -1,4 +1,30 @@
-.ReactModalPortal {
+.modal {
   position: relative;
   z-index: 100;
+}
+
+.modal__overlay {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  background-color: rgba(255, 255, 255, 0.75);
+  display: flex;
+  align-items: center;
+}
+
+.modal__content {
+  width: 100%;
+  // position: absolute;
+  // top: 40px;
+  // left: 40px;
+  // right: 40px;
+  // bottom: 40px;
+  // border: 1px solid rgb(204, 204, 204);
+  // background: rgb(255, 255, 255);
+  overflow: auto;
+  // border-radius: 4px;
+  // outline: none;
+  // padding: 20px;
 }
